--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ dependencies = [
     "requests~=2.32.3",
     "transitions~=0.9.2",
     "wrapt~=1.16.0"
-]
+, "httpx>=0.28.1,<0.29", "mcp>=1.2.1,<2"]
 
 # [project.optional-dependencies]
 # opencv-python = ["opencv-python~=4.10.0.84"]
@@ -101,3 +101,12 @@ pytest = "^8.0"
 
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
+
+[tool.pixi.project]
+channels = ["conda-forge"]
+platforms = ["osx-arm64"]
+
+[tool.pixi.pypi-dependencies]
+aiko_services = { path = ".", editable = true }
+
+[tool.pixi.tasks]
